overflow posts bug solved

--- a/style.css
+++ b/style.css
@@ -32,6 +32,7 @@ input[type="text"] {
 #infoReddit {
   background-image: url("./planets.jpg");
   padding: 0px;
+  height: 50px;
 }
 
 #infoReddit > div:nth-child(1) {
